--- a/Project.KienTrucPhanMem.Web/Project.KienTrucPhanMem.Web.csproj
+++ b/Project.KienTrucPhanMem.Web/Project.KienTrucPhanMem.Web.csproj
@@ -2730,6 +2730,9 @@
     <Content Include="Abp\Framework\styles\abp.mixings.css.map" />
     <Content Include="Abp\Framework\styles\abp.less" />
     <Content Include="Abp\Framework\styles\abp.css.map" />
+    <Content Include="App\Main\views\TiepNhan\Index.cshtml" />
+    <Content Include="App\Main\views\TiepNhan\phieudangky.cshtml" />
+    <Content Include="App\Main\views\TiepNhan\dichvu.cshtml" />
     <None Include="bundleconfig.json" />
     <None Include="compilerconfig.json" />
     <None Include="compilerconfig.json.defaults">
